Fix post alignment issue and reduce heading weight

--- a/css/index.css
+++ b/css/index.css
@@ -155,7 +155,7 @@ pre {
   text-decoration: none;
 }
 .nav-item-active {
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: underline;
 }
 
@@ -164,8 +164,8 @@ pre {
   list-style: none;
   padding: 0;
 }
-.postlist-item {
-  counter-increment: start-from -1;
+/* .postlist-item {
+  counter-increment: start-from -1; */
 }
 .postlist-item:before {
   display: inline-block;
@@ -184,7 +184,7 @@ pre {
 }
 .postlist-link {
   display: inline-block;
-  padding: 0.25em 0.1875em; /* 4px 3px /16 */
+  /* padding: 0.25em 0.1875em; 
 }
 .postlist-item-active .postlist-link {
   font-weight: bold;
